[project]
name = "my-weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.0",
    "requests>=2.32.4",
    "xmltodict>=0.14.2",
]

[project.scripts]
weather-server-run = "my_weather.weather_server:main"